# N_PCA

./: CMakeLists.txt  README.md
config/: config.txt  label.txt  test.txt  train.txt
demo/: demo.cpp  detector_demo.cpp
include/n_pca/: n_config.h  n_pca.h
script/: create_dataset.sh
src/: n_config.cpp  n_pca.cpp
